fix docs pathing

--- a/docs/layouts/docs.html
+++ b/docs/layouts/docs.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,800" rel="stylesheet">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
-    <link rel="stylesheet" href="../../assets/css/app.css">
+    <link rel="stylesheet" href="./assets/css/app.css">
   </head>
 
   <body class="docs">
@@ -19,7 +19,7 @@
     <section class="sidebar">
       <div class="sidebar-inner">
         <a href="#">
-          <img src="../../assets/images/leaf.svg"/>
+          <img src="./assets/images/leaf.svg"/>
         </a>
         <nav id="js-nav"></nav>
       </div>
@@ -29,6 +29,6 @@
         {{> body}}
       </div>
     </section>
-    <script src="../../assets/js/app.js"></script>
+    <script src="./assets/js/app.js"></script>
   </body>
 </html>
