--- a/docs/scss/_docs.scss
+++ b/docs/scss/_docs.scss
@@ -5,6 +5,14 @@
   font-weight: 400;
   line-height: 1.6;
 
+  .warning {
+    background: #ffeecc;
+    padding: 15px 25px;
+    border-radius: 4px;
+    font-size: 85%;
+    margin: 35px auto;
+  }
+
   p:nth-of-type(2) {
     margin: 60px 0 40px;
     font-size: 42px;
@@ -61,6 +69,13 @@
       font-size: 95%;
       background: darken(#F3EFEF, 2%);
       padding: 3px 5px 2px;
+    }
+    a {
+      transition: all .3s ease;
+      color: #911841;
+      &:hover {
+        color: #EF5A66;
+      }
     }
   }
 
