--- a/docs/assets/css/app.css
+++ b/docs/assets/css/app.css
@@ -66,17 +66,21 @@ h1, h2, h3, h4, h5, h6,
     .docs p a:hover, .docs li a:hover {
       color: #EF5A66; }
   .docs pre {
-    border-left: 3px solid #EF5A66;
-    padding: 15px 25px;
-    margin-left: 15px;
-    line-height: 1.3; }
+    border-left: 2px solid #faced2;
+    background: #F3EFEF;
+    padding: 25px 25px;
+    line-height: 1.3;
+    border-radius: 4px; }
     .docs pre:first-of-type {
       border: 0;
+      background: transparent;
       margin: -36px 0 0 0;
       font-size: 125%;
       padding: 0 0 0 32%; }
     .docs pre code {
       font-size: 85%; }
+      .docs pre code .normal {
+        color: #242424; }
       .docs pre code .comment {
         color: #adadad;
         font-style: italic; }
@@ -87,8 +91,10 @@ h1, h2, h3, h4, h5, h6,
       .docs pre code .html {
         color: #EF5A66; }
       .docs pre code .symbol {
-        color: #d8832d; }
+        color: #ca7a29; }
       .docs pre code .number {
+        color: #6e2295; }
+      .docs pre code .regex {
         color: #6e2295; }
       .docs pre code .normal.call {
         color: #1564a7; }
