--- a/docs/layouts/docs.html
+++ b/docs/layouts/docs.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MapleScript Docs</title>
-    <link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,800" rel="stylesheet">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
     <link rel="stylesheet" href="./assets/css/app.css">
