--- a/docs/scss/_docs.scss
+++ b/docs/scss/_docs.scss
@@ -1,9 +1,48 @@
+$menu-trigger: 1080px;
+
 .docs {
   background: #F9F7F7;
   color: #242424;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.6;
+
+  #js-menu-open {
+    background: darken(#F3EFEF, 2%);
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 80%;
+    padding: 3px 5px 1px;
+    border-radius: 4px;
+    display: none;
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    cursor: pointer;
+    z-index: 5;
+
+    @media screen and (max-width: $menu-trigger) {
+      display: block;
+    }
+  }
+
+  #js-menu-close {
+    background: darken(#F3EFEF, 5%);
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 80%;
+    padding: 3px 5px 1px;
+    border-radius: 4px;
+    display: none;
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    cursor: pointer;
+
+    @media screen and (max-width: $menu-trigger) {
+      display: block;
+    }
+  }
 
   .warning {
     background: #ffeecc;
@@ -13,11 +52,16 @@
     margin: 35px auto;
   }
 
+  // Say hello to...
   p:nth-of-type(2) {
     margin: 60px 0 40px;
     font-size: 42px;
     font-weight: 300;
     line-height: 1.3;
+
+    @media screen and (max-width: 600px) {
+      font-size: 36px;
+    }
   }
 
   .sidebar, .content {
@@ -30,6 +74,7 @@
   }
 
   .sidebar {
+    z-index: 10;
     background: #F3EFEF;
     width: 25%;
     position: fixed;
@@ -37,11 +82,37 @@
     left: 0;
     height: 100%;
     overflow: auto;
+    transition: all .3s ease;
+
+    @media screen and (max-width: $menu-trigger) {
+      width: 50%;
+      left: -50%;
+      background: rgba(#F3EFEF, .97);
+      box-shadow: 3px 0 100px rgba(0,0,0,0);
+    }
+
+    @media screen and (max-width: $menu-trigger / 2) {
+      width: 75%;
+      left: -75%;
+    }
+
+    &.open {
+      @media screen and (max-width: $menu-trigger) {
+        left: 0;
+        box-shadow: 3px 0 100px rgba(0,0,0,0.1);
+      }
+    }
   }
 
   .content {
     width: 75%;
     margin-left: 25%;
+    transition: all .3s ease;
+
+    @media screen and (max-width: $menu-trigger) {
+      width: 100%;
+      margin-left: 0;
+    }
   }
 
   .sidebar-inner {
@@ -86,12 +157,22 @@
     line-height: 1.3;
     border-radius: 4px;
 
+    // (make (delicious code) ...)
     &:first-of-type {
       border: 0;
       background: transparent;
       margin: -36px 0 0 0;
       font-size: 125%;
       padding: 0 0 0 32%;
+
+      @media screen and (max-width: 600px) {
+        font-size: 90%;
+        margin: -25px 0 0 0;
+      }
+
+      @media screen and (max-width: 400px) {
+        display: none;
+      }
     }
 
     code {
