--- a/docs/layouts/docs.html
+++ b/docs/layouts/docs.html
@@ -18,6 +18,7 @@
 
     <section class="sidebar">
       <div class="sidebar-inner">
+        <a id="js-menu-close">close</a>
         <a href="#">
           <img src="./assets/images/leaf.svg"/>
         </a>
@@ -25,6 +26,7 @@
       </div>
     </section>
     <section class="content">
+      <a id="js-menu-open">menu</a>
       <div class="content-inner">
         {{> body}}
       </div>
